--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World</title> 
+  <title>Hello World</title>
+  <link rel="stylesheet" href="https://keel13.github.io/style.css">
+  <link rel="icon" href="https://keel13.github.io/favicon.ico">
+  <link rel="shortcut icon" href="https://keel13.github.io/favicon.ico">
 </head>
 <body>
 
